<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="#D0F76E">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/mytreks"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="20dp" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginBottom="40dp" >
<TableLayout
		android:id="@+id/TableLayout"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:stretchColumns="*">
		<TableRow
			android:id="@+id/TableRow01"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<TextView
				android:id="@+id/TextView01"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="#72135D"
				android:text="@string/type"></TextView>
			<TextView
				android:id="@+id/TextView02"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="#72135D"
				android:text="@string/date"></TextView>
			<TextView
				android:id="@+id/TextView03"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="#72135D"
				android:text="@string/dist"></TextView>
			<TextView
				android:id="@+id/TextView04"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="#72135D"
				android:text="@string/time"></TextView>
				<TextView
				android:id="@+id/TextView05"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="#72135D"
				android:text="@string/more"></TextView>
		</TableRow>
 </TableLayout>
    </ScrollView>




</RelativeLayout>