<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_l"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A4C739" 
    tools:ignore="UselessLeaf" >





    <ImageView
        android:id="@+id/cam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="@dimen/edge_2"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/cam"
        android:src="@drawable/cam" 
        android:clickable="true"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@color/stop_color"
        android:onClick="stopChronometer"
        android:text="@string/time1"
        android:textColor="@color/text_color" />

    <Button
        android:id="@+id/button2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@color/pause_color"
        android:onClick="pauseChronometer"
        android:text="@string/time2"
        android:textColor="@color/text_color" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/cam"
        android:layout_marginTop="14dp"
        android:background="#63CFFF"
        android:text="@string/distance"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text_color"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:background="#63CFFF"
        android:text="@string/calories"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text_color"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView1"
        android:layout_toRightOf="@+id/textView1"
        android:background="#63CFFF"
        android:ems="10"
        android:text="@string/klm"
        android:textColor="@color/text_color"
        android:textSize="15dp" />
    
  <TextView
      android:id="@+id/editText2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBottom="@+id/textView2"
      android:layout_alignParentRight="true"
      android:layout_alignTop="@+id/textView2"
      android:layout_toRightOf="@+id/textView2"
      android:background="#63CFFF"
      android:ems="10"
      android:text="@string/cal"
      android:textColor="@color/text_color"
      android:textSize="15dp" />

    <com.google.android.maps.MapView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/map_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView2"
        android:layout_weight="0.01"
        android:apiKey="0QD5DkceIEpCHrDxQJOD7HzXhl91sCHzHY5hmvg"
        android:clickable="true"
        android:enabled="true" >

    </com.google.android.maps.MapView>

    <Button
        android:id="@+id/button3"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:layout_above="@+id/textView1"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/cam"
        
        android:background="#9DA3A1"
        android:text="@string/diary"
        android:textColor="@color/text_color"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/loc1"
        android:textColor="@color/text_color"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/loc2"
        android:textColor="@color/text_color"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText2"
        android:layout_toLeftOf="@+id/button3"
        android:text="@string/speed"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15dp" 
         android:textColor="@color/text_color"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/editText1"
        android:text="@string/nothing"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text_color"
        android:textSize="15dp" />

</RelativeLayout>